--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,10 @@ php:
   - 7.1
   - 7.2
 env:
-  - APPLICATION=ojs BRANCH=master TEST=mysql
-  - APPLICATION=ojs BRANCH=master TEST=pgsql
-  - APPLICATION=omp BRANCH=master TEST=mysql
-  - APPLICATION=omp BRANCH=master TEST=pgsql
+  - APPLICATION=ojs BRANCH=stable-3_1_2 TEST=mysql
+  - APPLICATION=ojs BRANCH=stable-3_1_2 TEST=pgsql
+  - APPLICATION=omp BRANCH=stable-3_1_2 TEST=mysql
+  - APPLICATION=omp BRANCH=stable-3_1_2 TEST=pgsql
 
 install:
   # Prepare OJS/OMP environment
