--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,6 @@ install:
   - cd ~/${APPLICATION}
   - git submodule update --init --recursive
   - source lib/pkp/tools/travis/prepare-tests.sh
-  # Prepare server environment
-  - source lib/pkp/tools/travis/start-xvfb.sh
-  - lib/pkp/tools/travis/start-selenium.sh
   - lib/pkp/tools/travis/prepare-webserver.sh
   # Build/install dependencies
   - lib/pkp/tools/travis/install-composer-dependencies.sh
@@ -36,7 +33,6 @@ install:
   - rm -rf ~/${APPLICATION}/plugins/generic/staticPages
   - ln -s ${TRAVIS_BUILD_DIR} ~/${APPLICATION}/plugins/generic/staticPages
   # Install OJS/OMP & prep data environment
-  - lib/pkp/lib/vendor/phpunit/phpunit/phpunit --configuration lib/pkp/tests/phpunit-env1.xml --filter "InstallationTest|CreateContextTest" tests/data
-  - lib/pkp/tools/travis/dump-database.sh
+  - $(npm bin)/cypress run --spec "cypress/tests/data/10-Installation.spec.js,cypress/tests/data/20-CreateContext.spec.js"
 script:
-  - lib/pkp/lib/vendor/phpunit/phpunit/phpunit --debug -v --configuration lib/pkp/tests/phpunit-env2.xml plugins/generic/staticPages/tests/functional/StaticPagesFunctionalTest.php
+  - $(npm bin)/cypress run --config integrationFolder=plugins/generic/staticPages/cypress/tests
