--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,20 @@
 # @file
 # .travis.yml - PKP Plugins Integration
 
+dist: bionic
+os: linux
 language: php
 
 addons:
+  postgresql: "9.5"
   apt:
     update: true
 
 sudo: required
 
 php:
-  - 7.3
   - 7.4
+  - 8.0
 env:
   - APPLICATION=ojs BRANCH=main TEST=mysql
   - APPLICATION=ojs BRANCH=main TEST=pgsql
@@ -34,6 +37,17 @@ install:
   - rm -rf ~/${APPLICATION}/plugins/generic/staticPages
   - ln -s ${TRAVIS_BUILD_DIR} ~/${APPLICATION}/plugins/generic/staticPages
   # Install OJS/OMP & prep data environment
-  - $(npm bin)/cypress run --spec "cypress/tests/data/10-Installation.spec.js,cypress/tests/data/20-CreateContext.spec.js"
+  - git clone https://github.com/pkp/datasets
+  - cp datasets/${APPLICATION}/${BRANCH}/${TEST}/config.inc.php .
+  - cp -rf datasets/${APPLICATION}/${BRANCH}/${TEST}/public/* public/
+  - cp -rf datasets/${APPLICATION}/${BRANCH}/${TEST}/files/* files/
+  - cat datasets/${APPLICATION}/${BRANCH}/${TEST}/database.sql | gzip > ${DATABASEDUMP}
+  - ./lib/pkp/tools/travis/load-database.sh
+
 script:
   - $(npm bin)/cypress run --config integrationFolder=plugins/generic/staticPages/cypress/tests
+
+after_failure:
+  - cat error.log
+  - sudo apt-get install sharutils
+  - tar cz cypress/screenshots | uuencode /dev/stdout
