--- a/.travis.yml
+++ b/.travis.yml
@@ -35,19 +35,9 @@ install:
   - npm i g -npm && npm install && npm run build
   # Make sure we're using the current checkout of this repo rather than the built-in OJS/OMP version
   - rm -rf ~/${APPLICATION}/plugins/generic/staticPages
-  - mv ${TRAVIS_BUILD_DIR} ~/${APPLICATION}/plugins/generic/staticPages
-  # Install OJS/OMP & prep data environment
-  - git clone https://github.com/pkp/datasets
-  - cp datasets/${APPLICATION}/${BRANCH}/${TEST}/config.inc.php .
-  - cp -rf datasets/${APPLICATION}/${BRANCH}/${TEST}/public/* public/
-  - cp -rf datasets/${APPLICATION}/${BRANCH}/${TEST}/files/* files/
-  - ./datasets/tools/dbclient.sh < datasets/${APPLICATION}/${BRANCH}/${TEST}/database.sql
-  # Some apps have this plugin installed as a submodule, so may already have the tables present.
-  # If so, drop them (ignoring errors if they don't already exist).
-  - php lib/pkp/tools/migration.php "\APP\plugins\generic\staticPages\StaticPagesSchemaMigration" down || true
-
+  - ln -s ${TRAVIS_BUILD_DIR} ~/${APPLICATION}/plugins/generic/staticPages
 script:
-  - php lib/pkp/tools/migration.php "\APP\plugins\generic\staticPages\StaticPagesSchemaMigration" up
+  - $(npm bin)/cypress run --spec "cypress/tests/data/10-Installation.spec.js,cypress/tests/data/20-CreateContext.spec.js"
   - $(npm bin)/cypress run --config integrationFolder=plugins/generic/staticPages/cypress/tests
 
 after_failure:
