--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,20 @@
 # @file
 # .travis.yml - PKP Plugins Integration
 
+dist: bionic
+os: linux
 language: php
 
 addons:
+  postgresql: "9.5"
   apt:
     update: true
 
 sudo: required
 
 php:
-  - 7.3
   - 7.4
+  - 8.0
 env:
   - APPLICATION=ojs BRANCH=main TEST=mysql
   - APPLICATION=ojs BRANCH=main TEST=pgsql
@@ -33,7 +36,11 @@ install:
   # Make sure we're using the current checkout of this repo rather than the built-in OJS/OMP version
   - rm -rf ~/${APPLICATION}/plugins/generic/staticPages
   - ln -s ${TRAVIS_BUILD_DIR} ~/${APPLICATION}/plugins/generic/staticPages
-  # Install OJS/OMP & prep data environment
-  - $(npm bin)/cypress run --spec "cypress/tests/data/10-Installation.spec.js,cypress/tests/data/20-CreateContext.spec.js"
 script:
+  - $(npm bin)/cypress run --spec "cypress/tests/data/10-Installation.spec.js,cypress/tests/data/20-CreateContext.spec.js"
   - $(npm bin)/cypress run --config integrationFolder=plugins/generic/staticPages/cypress/tests
+
+after_failure:
+  - cat error.log
+  - sudo apt-get install sharutils
+  - tar cz cypress/screenshots | uuencode /dev/stdout
