--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ install:
   - ln -s ${TRAVIS_BUILD_DIR} ~/${APPLICATION}/plugins/generic/staticPages
 
 script:
-  - $(npm bin)/cypress run --spec "cypress/tests/data/10-Installation.spec.js,cypress/tests/data/20-CreateContext.spec.js"
+  - $(npm bin)/cypress run --spec "cypress/tests/data/10-Installation.cy.js,cypress/tests/data/20-CreateContext.cy.js"
   - $(npm bin)/cypress run --config integrationFolder=plugins/generic/staticPages/cypress/tests
 
 after_failure:
