--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 # @file
 # .travis.yml - PKP Plugins Integration
 
-dist: bionic
+dist: focal
 os: linux
 language: php
 
@@ -17,8 +17,8 @@ addons:
 sudo: required
 
 php:
-  - 8.0
   - 8.1.0
+  - 8.2.0
 env:
   - APPLICATION=ojs BRANCH=main TEST=mysql
   - APPLICATION=ojs BRANCH=main TEST=pgsql
